Deployment: Almost fixed

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ JWT_SECRET=963258741
 JWT_EXPIRES_IN=1d
 
 # Client
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://dynamic-mern-portfolio.onrender.com/api
 
 # Tinymce
 VITE_TINYMCE_API_KEY=wrmrgxp318mx5n8m2smbt2kbx841t9ozdm20nd29aw604av9
